# Yade_Game

./: .gitignore  CLAUDE.md
backend/: .env.example  .gitignore  alembic.ini  play.py  pyproject.toml  requirements.txt  test_player.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/routes/: affinity.py  chat.py  levels.py  player.py
backend/app/api/websocket/: chat_ws.py
backend/app/core/: level_engine.py
backend/app/data/characters/: yade.yaml
backend/app/data/docs/: chapter_01_full_reference.yaml
backend/app/data/levels/: chapter_01.yaml
backend/app/db/: database.py  redis.py
backend/app/models/: __init__.py  affinity.py  chat_history.py  level.py  player.py
backend/app/schemas/: affinity.py  chat.py  level.py  player.py
backend/app/services/: affinity_service.py  chat_service.py  level_service.py  llm_service.py  memory_service.py
backend/tests/: conftest.py  test_affinity_service.py  test_level_service.py  test_player.py
docker/: commands.txt  docker-compose.yml
docs/: api_spec.md
